# szun

./: Cargo.toml  LICENSE.txt  README.md  build.rs  project.code-workspace
src/: lib.rs  tag.rs  tests.rs
src/encoding/: mod.rs
src/interface/: array.rs  block.rs  boolean.rs  builder.rs  integer.rs  list.rs  mod.rs  natural.rs  record.rs  schema.rs  sequence.rs  signfiicant.rs  util.rs  varying.rs
src/language/: mod.rs
src/runtime/: lib.cc  lib.h  mod.rs  nametree.h  pool.h  rawlist.cc  rawlist.h  sparselist.h  type.h  typetree.h  util.rs
src/util/: mod.rs
